src/test/ui/generic-associated-types/generic-associated-types-where.stderr
error: type-generic associated types are not yet implemented
  --> $DIR/generic-associated-types-where.rs:11:5
   |
LL |     type Assoc2<T> where T: Display;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265

error: type-generic associated types are not yet implemented
  --> $DIR/generic-associated-types-where.rs:13:5
   |
LL |     type Assoc3<T>;
   |     ^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265

error: type-generic associated types are not yet implemented
  --> $DIR/generic-associated-types-where.rs:15:5
   |
LL |     type WithDefault<'a, T: Debug + 'a> = dyn Iterator<Item=T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265

error: aborting due to 3 previous errors

